hotfix: correct padding and overflow text

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,5 @@
 .page {
+  padding: 0 20px;
   vertical-align: text-top;
   font-family: 'Inter', 'Arial', sans-serif;
   margin: 0 auto;
@@ -14,5 +15,11 @@
 @media (max-width: 870px) {
   .page {
     max-width: 580px;
+  }
+}
+
+@media (max-width: 320px) {
+  .page {
+    padding: 0;
   }
 }
