--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,11 +3,16 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 1.14;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 470px;
 }
 
 @media (max-width: 870px) {
   .profile__name {
-    font-size: 35px;
+    font-size: 30px;
+    max-width: 250px;
   }
 }
 
@@ -15,5 +20,6 @@
   .profile__name {
     font-size: 27px;
     line-height: 33px;
+    max-width: 220px;
   }
 }
